[package]
name = "yubihsm"
version = "0.43.0-pre"
description = """
Pure Rust client for YubiHSM2 devices with support for HTTP and
USB-based access to the device. Supports most HSM functionality
including ECDSA, Ed25519, HMAC, and RSA.
"""
license = "Apache-2.0 OR MIT"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
documentation = "https://docs.rs/yubihsm"
repository = "https://github.com/iqlusioninc/yubihsm.rs"
readme = "README.md"
categories = ["cryptography", "hardware-support"]
keywords = ["ecdsa", "ed25519", "hmac", "hsm", "yubikey"]
edition = "2021"
rust-version = "1.70"

[dependencies]
aes = { version = "=0.9.0-pre", features = ["zeroize"] }
bitflags = "2"
cmac = "=0.8.0-pre"
cbc = "=0.2.0-pre"
ccm = { version = "0.5", features = ["std"] }
der = { version = "0.8.0-pre.0" }
digest = { version = "=0.11.0-pre.8", default-features = false }
ecdsa = { version = "=0.17.0-pre.5", default-features = false, features = ["pkcs8"] }
ed25519 = "=2.3.0-pre"
log = "0.4"
num-traits = "0.2"
p256 = { version = "=0.14.0-pre.0", default-features = false, features = ["ecdsa"] }
p384 = { version = "=0.14.0-pre", default-features = false, features = ["ecdsa"] }
serde = { version = "1", features = ["serde_derive"] }
rand_core = { version = "0.6", features = ["std"] }
rsa = "=0.10.0-pre.1"
signature = { version = "=2.3.0-pre.3", features = ["derive"] }
sha1 = { version = "=0.11.0-pre.3", features = ["oid"] }
sha2 = { version = "=0.11.0-pre.3", features = ["oid"] }
spki = { version = "=0.8.0-pre.0", default-features = false }
subtle = "2"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", default-features = false }
x509-cert = { version = "=0.3.0-pre", features = ["builder"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# optional dependencies
ed25519-dalek = { version = "=2.2.0-pre", optional = true, features = ["rand_core"] }
hmac = { version = "=0.13.0-pre.3", optional = true }
k256 = { version = "=0.14.0-pre.0", optional = true, features = ["ecdsa", "sha256"] }
pbkdf2 = { version = "=0.13.0-pre.0", optional = true, default-features = false, features = ["hmac"] }
serde_json = { version = "1", optional = true }
rusb = { version = "0.9", optional = true }
tiny_http = { version = "0.12", optional = true }
yubikey = { version = "0.8.0", optional = true }

[dev-dependencies]
ed25519-dalek = "=2.2.0-pre"
hex-literal = "0.4"
once_cell = "1"
rsa = { version = "=0.10.0-pre.1", features = ["sha1", "sha2"] }
p256 = { version = "=0.14.0-pre.0", features = ["ecdsa"] }

[features]
default = ["http", "passwords", "setup"]
http-server = ["tiny_http"]
http = []
mockhsm = ["ecdsa/arithmetic", "ed25519-dalek", "p256/ecdsa", "secp256k1"]
passwords = ["hmac", "pbkdf2"]
secp256k1 = ["k256"]
setup = ["passwords", "serde_json", "uuid/serde"]
untested = []
usb = ["rusb"]
yubihsm-auth = ["yubikey"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "connector_http_server"
required-features = ["http-server", "usb"]

[patch.crates-io]


p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

const-oid  = { git = "https://github.com/RustCrypto/formats.git" }
der        = { git = "https://github.com/RustCrypto/formats.git" }
der_derive = { git = "https://github.com/RustCrypto/formats.git" }
pkcs1      = { git = "https://github.com/RustCrypto/formats.git" }
pkcs8      = { git = "https://github.com/RustCrypto/formats.git" }
sec1       = { git = "https://github.com/RustCrypto/formats.git" }
spki       = { git = "https://github.com/RustCrypto/formats.git" }
x509-cert  = { git = "https://github.com/RustCrypto/formats.git" }

cbc = { git = "https://github.com/RustCrypto/block-modes.git" }
ctr = { git = "https://github.com/RustCrypto/block-modes.git" }

cmac = { git = "https://github.com/RustCrypto/MACs.git" }

ccm = { git = "https://github.com/RustCrypto/AEADs.git" }

# https://github.com/RustCrypto/signatures/pull/807
ed25519 = { git = "https://github.com/RustCrypto/signatures.git" }
ecdsa   = { git = "https://github.com/RustCrypto/signatures.git" }

# https://github.com/dalek-cryptography/curve25519-dalek/pull/620
curve25519-dalek = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rust-crypto/digest-sha2-bumps" }
ed25519-dalek    = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rust-crypto/digest-sha2-bumps" }

pbkdf2 = { git = "https://github.com/RustCrypto/password-hashes.git", branch = "master" }

yubikey = { git = "https://github.com/baloo/yubikey.rs", branch = "baloo/rustcrypto-pre-releases_yubihsm-auth" }
